name:
  "coq-zebre"
synopsis:
  "Zebre"
opam-version:
  "2.0"
maintainer:
  ""
authors: [
  ""
]
homepage:
  ""
bug-reports:
  ""
depends: [
  "coq" {= "8.18.0"}
  "coq-stdpp" {= "dev.2023-11-16.0.809926b5"}
  "coq-iris" {= "dev.2024-01-11.0.838322ad"}
  "coq-diaframe" {= "dev.2024-01-30.0.cd2f6756"}
]
build: [
  make "-j%{jobs}%"
]
