name:
  "coq-zoo"
synopsis:
  "Zoo"
opam-version:
  "2.0"
maintainer:
  "clement.allain@inria.fr"
authors: [
  "Clément Allain"
]
homepage:
  "https://github.com/clef-men/zoo"
bug-reports:
  "https://github.com/clef-men/zoo/issues"

pin-depends: [
  ["coq-zoo.dev" "git+https://github.com/clef-men/zoo.git#main"]
]
depends: [
  "coq-zoo"
]

build: [
  make "-j%{jobs}%" "build-zoo-std"
]
install: [
  make "install-zoo-std"
]
